# django-ninja-unfold

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
common/: api.py  models.py  unfold.py
core/: settings.py  urls.py
users/: admin.py  api.py  schema.py
users/migrations/: 0001_initial.py
