[tool.poetry]
name = "django-ninja-unfold"
version = "0.1.0"
description = "A Django template pre-configured with Django Ninja, Ninja JWT, and Django Unfold."
authors = ["Hojayfa Rahman <hojayfarahman@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
dj-database-url = "^2.3.0"
django-cors-headers = "^4.6.0"
python-dotenv = "^1.0.1"
django-ninja = "^1.3.0"
django-ninja-jwt = "^5.3.5"
django-unfold = "^0.49.1"

[tool.poetry.group.dev.dependencies]
djlint = "^1.36.4"
